sass/style.scss
$body-color: whitesmoke;
$background-color: rgb(32, 32, 32);
$board-color: whitesmoke;
$catch-color: forestgreen;
$flee-color: orangered;

$primary-font: 'Roboto', sans-serif;
$secondary-font: 'Patrick Hand', cursive;
$numeric-font: 'Orbitron', sans-serif;

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  height: 100vh;
  width: 100vw;
  color: $body-color;
  background-color: $background-color;
  font-size: calc(12px + 0.5vw);
  line-height: calc(1.1em + 0.5vw);
  font-family: $primary-font;
}

a {
  color: inherit;
  text-decoration: inherit;
  border-bottom: 1px solid $body-color;
  cursor: pointer;
}

h1,
h2 {
  font-family: $secondary-font;
  padding: 10px 4px;
}

button {
  display: inline-flex;
  align-items: center;
  cursor: pointer;
  border: 2px solid $board-color;
  background-color: $background-color;
  color: $board-color;
  margin: 4px;
  padding: 6px 12px;
  text-decoration: none;
  text-transform: uppercase;
  transition: transform 0.2s;
  &:hover {
    transform: scale(1.2);
  }
  &:before {
    content: '';
    float: left;
    height: 20px;
    width: 20px;
    background-size: contain;
    background-image: url('../assets/items/poke-ball.png');
    background-repeat: no-repeat;
  }
}

#container {
  display: grid;
  height: 100%;
  grid-template-columns: auto;
  grid-template-rows: 80px 1fr 120px 40px;
  grid-template-areas:
    'header'
    'board'
    'play'
    'footer';
  justify-items: center;
  align-items: center;
  header {
    grid-area: header;
  }
  #board {
    height: 100%;
    grid-area: board;
    #board-container {
      margin: 0 auto;
      width: fit-content;
      width: -moz-fit-content;
      display: grid;
      grid-template-columns: repeat(7, 42px);
      grid-template-rows: repeat(7, 42px);
      gap: 1px;
    }
    #info {
      padding: 10px;
    }
  }
  #play {
    grid-area: play;
  }
  footer {
    grid-area: footer;
  }
}

// from https://animista.net/
@keyframes pokemon-catch {
  from {
    transform: scale(1);
    transform-origin: center center;
    animation-timing-function: ease-out;
  }
  10% {
    transform: scale(0.91);
    animation-timing-function: ease-in;
  }
  17% {
    transform: scale(0.98);
    animation-timing-function: ease-out;
  }
  33% {
    transform: scale(0.87);
    animation-timing-function: ease-in;
  }
  45% {
    transform: scale(1);
    animation-timing-function: ease-out;
  }
  100% {
    transform: scale(0);
  }
}
// from https://animista.net/
@keyframes pokemon-hide {
  0%,
  100% {
    transform: translateX(0);
    transform: scale(0);
  }
  10%,
  30%,
  50%,
  70% {
    transform: translateX(-10px);
  }
  20%,
  40%,
  60% {
    transform: translateX(10px);
  }
  80% {
    transform: translateX(8px);
  }
  90% {
    transform: translateX(-8px);
  }
}
moving-pokemon {
  background-color: $board-color;
  width: 40px;
  height: 40px;
  background-repeat: no-repeat;
  &.link {
    cursor: pointer;
  }
  &.catch {
    animation: pokemon-catch 2s linear both;
  }
  &.gone {
    animation: pokemon-hide 2s linear both;
  }
  @for $x from 1 through 28 {
    @for $y from 1 through 18 {
      @if (($x + (($y - 1) * 28)) <= 492) {
        &.n#{($x + (($y - 1) * 28))} {
          background-position: -40px * ($x - 1) -40px * ($y - 1);
          background-image: url('../assets/sprite_f1.png');
          // second frame
          &.f2 {
            background-image: url('../assets/sprite_f2.png');
          }
        }
      }
    }
  }
}

my-intro {
  line-height: 150%;
  padding: 20px;
  p {
    margin: 10px;
  }
  blockquote {
    padding-left: 20%;
  }
  img {
    width: 25vw;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
  }
}

current-score {
  font-family: $secondary-font;
  display: flex;
  justify-content: space-evenly;
  width: 80vw;
  .catch {
    padding: 4px 10px 4px 10px;
    border-bottom: 1px solid $catch-color;
    span {
      margin: 4px;
      font-weight: bold;
      color: $catch-color;
      font-family: $numeric-font;
    }
  }
  .flee {
    padding: 4px 10px 4px 10px;
    border-bottom: 1px solid $flee-color;
    span {
      margin: 4px;
      font-weight: bold;
      color: $flee-color;
      font-family: $numeric-font;
    }
  }
}

@keyframes color-change {
  0% {
    color: $catch-color;
  }
  100% {
    color: $flee-color;
  }
}
counter-clock {
  span {
    &:nth-child(1) {
      font-family: $numeric-font;
      color: $catch-color;
      &.countdown {
        animation: color-change 200s linear;
      }
    }
  }
}

@keyframes fade-in-left {
  0% {
    transform: translateX(-50px);
    opacity: 0;
  }
  100% {
    transform: translateX(0);
    opacity: 1;
  }
}
play-area {
  display: grid;
  width: 99vw;
  grid-template-columns: minmax(140px, 1fr) 3fr;
  #photo {
    padding: 8px;
    justify-self: center;
    align-self: end;
    img {
      width: 100px;
      height: 100px;
      transition: 1s;
      filter: brightness(0) drop-shadow(0 0 0.7rem gold);
    }
    &.reveal {
      img {
        filter: brightness(1) drop-shadow(0 0 0.2rem white);
      }
    }
  }
  #guess {
    ul {
      width: 100%;
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
      li {
        display: flex;
        align-items: center;
        width: 46%;
        list-style: none;
        margin: 2px;
        animation: fade-in-left 0.4s linear both;
        @for $x from 1 through 6 {
          &:nth-child(#{$x}) {
            animation-delay: ($x * 0.05s);
          }
        }
        span {
          &.link {
            cursor: pointer;
          }
          &:hover {
            transform: scale(1.2);
          }
          &:before {
            content: '';
            float: left;
            height: 20px;
            width: 20px;
            background-size: contain;
            background-image: url('../assets/items/poke-ball.png');
            background-repeat: no-repeat;
          }
          &.correct {
            color: $catch-color;
          }
          &.wrong {
            color: $flee-color;
          }
          &.fade {
            opacity: 0;
          }
        }
      }
    }
  }
}

high-scores {
  table,
  th,
  td {
    border-bottom: 1px solid $board-color;
    border-right: 1px dotted $board-color;
  }
  th {
    padding: 8px;
    font-size: 110%;
  }
  td {
    font-family: $numeric-font;
    padding: 4px;
    &:nth-of-type(2) {
      color: $catch-color;
    }
    &:nth-of-type(3) {
      color: $flee-color;
    }
  }
  table {
    margin-top: 20px;
    width: 100%;
    text-align: center;
    vertical-align: center;
  }
}

sleep-pokemon {
  line-height: 200%;
  padding: 20px;
  img {
    width: 50%;
    float: right;
  }
}

